--- a/src/Comp/Comp.css
+++ b/src/Comp/Comp.css
@@ -1,10 +1,11 @@
 .top {
     text-align: center;
-    padding: 1%;
-    background-color: #b19378;
+    /* padding: -1%; */
+    background-color: white;
+    /* background-color: white; */
 }
 .head {
-    background-color: #b88458;
+    background-color: white;
     /* border-bottom: brown 2px solid; */
     /* box-shadow: brown 1px 1px 20px 1px; */
     /* margin-bottom: 0px; */
@@ -13,7 +14,7 @@
 .head a{
     color:white;
     margin: 0px 20px;  
-    /* font-size: 20px; */
+    font-size: 20px;
     /* box-shadow: 2px 2px 20px 2px green; */
     font-weight: 500;  
 }
@@ -29,19 +30,20 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    background-color: #b19378;
+    background-color: white;
     flex-wrap: wrap;
     padding: 5% 0px;
     /* max-width: 1400px; */
 }
 .serv section{
     width: 40%;
+    margin: 2%;
     min-width: 315px;
 }
 .slid{
     overflow: hidden;
     text-align: center;
-    background-color: #b19378;
+    background-color: white;
     padding: 1% 2%;
 }
 .cont{
@@ -57,7 +59,7 @@
     color: white;
     /* opacity: 0; */
     margin: 2%;
-    background: rgba(158, 129, 0, 0.8);
+    background: rgba(136, 126, 82, 0.5);
     /* background-color: aqua; */
     transition: 0.6s all;
 }
