--- a/src/Comp/Comp.css
+++ b/src/Comp/Comp.css
@@ -75,6 +75,6 @@
     /* background-color: white; */
 
     background-image: url(../Assests/ham.png);
-    /* background-size: 70%; */
+    background-size: 100%;
     background-repeat: no-repeat;
 }
