--- a/src/Comp/Comp.css
+++ b/src/Comp/Comp.css
@@ -1,7 +1,8 @@
 .top {
     text-align: center;
     /* padding: -1%; */
-    background-color: white;
+    background-image: linear-gradient(to bottom, #ecdbcc,white);
+    /* background-color: white; */
     /* background-color: white; */
 }
 .head {
@@ -59,17 +60,15 @@
     color: white;
     /* opacity: 0; */
     margin: 2%;
-    background: rgba(136, 126, 82, 0.5);
+    background: #b4875c88;
     /* background-color: aqua; */
     transition: 0.6s all;
 }
-/* .cont:hover .txt{
-    visibility: visible;
-    opacity: 1;  
-} */
-.cont:hover img{
-    opacity: 0.8;
+.cont:hover .txt{
     cursor: pointer;
+    background: #b4875c;
+    /* opacity: 0.8; */
+    /* cursor: pointer; */
 }
 .navbar-light .navbar-toggler {
     /* background-color: white; */
