--- a/src/Comp/Comp.css
+++ b/src/Comp/Comp.css
@@ -80,3 +80,12 @@
 .footdiv{
     background-image: linear-gradient(to top, #ecdbcc,white);
 }
+
+.utube{
+    text-align: center;
+    padding: 1%;
+    background-image: linear-gradient(to bottom, #ecdbcc,white);
+}
+.utube h2{
+    padding: 1%;
+}
