--- a/src/Comp/Comp.css
+++ b/src/Comp/Comp.css
@@ -135,15 +135,31 @@
 }
 .about {
     display: flex;
+    background-image: linear-gradient(to right, peachpuff, white);
 }
 .about section {
     width: 50%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.about txt{
+.about section txt{
     display: block;
     font-size: larger;
-    padding: 50% 10%;
+    padding-left: 2%;
+    /* padding: 50% 10%; */
+}
+.about section div {
+    max-width: 24rem;
+    box-shadow:#b4875c 8px 2px 10px 1px;
+    border: rgb(253, 182, 119) solid 2px;
+    margin: 1%;
+    background-image: linear-gradient(to right, peachpuff,white,peachpuff);
+    /* padding-bottom: 10%; */
+}
+.about section div:hover{
+    cursor: pointer;
+    box-shadow: #b4875c 15px 5px 20px 1px;
 }
