--- a/src/Comp/Comp.css
+++ b/src/Comp/Comp.css
@@ -117,36 +117,28 @@
     right: 5%;
 }
 
-@media screen and (max-width: 990px) {
-    .head img {
-        /* right: 10%; */
-        left: auto;
-    }
-    .headicon {
-        top: 50%;
-    }
-    .head a{
-        padding: 0px 1px;
-    }
-}
 .dropdown{
     color: black;
     /* bottom: 5px; */
 }
 .about {
     display: flex;
+    flex-wrap: wrap;
+    /* width: 100%; */
     background-image: linear-gradient(to right, peachpuff, white);
+    /* background-color: aqua; */
 }
 .about section {
     width: 50%;
     text-align: center;
     display: flex;
-    flex-direction: row;
+    /* flex-direction: row; */
     justify-content: center;
     align-items: center;
 }
 .about section txt{
-    display: block;
+    /* display: block; */
+    width: 100%;
     font-size: larger;
     padding-left: 2%;
     line-height: 200%;
@@ -155,7 +147,8 @@
     /* padding: 50% 10%; */
 }
 .about section div {
-    max-width: 24rem;
+    /* max-width: 24rem; */
+    max-width: 50%;
     /* max-height: 20rem; */
     box-shadow:#b4875c 8px 2px 10px 1px;
     border: rgb(253, 182, 119) solid 2px;
@@ -176,4 +169,21 @@
     line-height: 200%;
     padding: 2%;
     text-align: center;
+}
+
+
+@media screen and (max-width: 990px) {
+    .head img {
+        /* right: 10%; */
+        left: auto;
+    }
+    .headicon {
+        top: 50%;
+    }
+    .head a{
+        padding: 0px 1px;
+    }
+    .about section {
+        width: 100%;
+    }
 }
