--- a/src/Comp/Comp.css
+++ b/src/Comp/Comp.css
@@ -187,3 +187,37 @@
         width: 100%;
     }
 }
+
+.contact {
+    max-width: 1400px;
+    margin: 2%  auto;
+}
+.contact div{
+    /* background-color: aqua; */
+    display: flex;
+}
+.contact div section{
+    /* display: fle; */
+    /* margin: auto; */
+    padding: 2%;
+    /* border: #b4875c 2px solid; */
+    justify-content: center;
+}
+.contact input{
+    margin: 2%;
+}
+.contact #big{
+    width: 74% ;
+    height: 150px;
+}
+.contact button{
+    margin: 2%;
+    width: 74%;
+    border: peachpuff 1px solid;
+    height: 40px;
+    background-color: peachpuff;
+}
+.contact button:hover{
+    background-color: rgb(243, 161, 89);
+    transition: all 0.6s;
+}
